# fond-utils

./: .gitignore  README.md  pyproject.toml  setup.py
fondutils/: __init__.py  __main__.py  __version__.py  determizer.py  normalizer.py  sas.py
fondutils/pddl/: domprob.py
tests/: domain_03.pddl  domain_05.pddl  test_det.py  test_norm.py
